--- a/04_Expression/env/environment.yml
+++ b/04_Expression/env/environment.yml
@@ -7,6 +7,8 @@ dependencies:
  - r-tidyverse >= 1.3.0
  - r-wgcna >= 1.69
  - r-rcolorbrewer >= 1.1_2
+ - r-cowplot >= 1.1.1
+ - r-svglite >= 2.0.0                           #  Required for ggplot2 SVG
  - bioconductor-biomart >= 2.48.0
  - bioconductor-clusterprofiler >= 4.0.0
  - bioconductor-reactomepa >= 1.36.0
