--- a/01_Colocalization/workflow/nextflow.config
+++ b/01_Colocalization/workflow/nextflow.config
@@ -27,8 +27,10 @@ process {
     }
 
     withLabel: R {
+        queue = 'long'
         cpus = 1
         memory = '8.0 GB'
+        time = '48h'
         clusterOptions = "-R'select[mem>8192]' -R'rusage[mem=8192]' -M8192"
     }
 
