Updated featureCounts to sort paired-end reads

--- a/03_Functional_Interpretation/workflow/nextflow.config
+++ b/03_Functional_Interpretation/workflow/nextflow.config
@@ -124,4 +124,11 @@ process {
         time = '12h'
         clusterOptions = "-R'select[mem>10240]' -R'rusage[mem=10240]' -M10240"
     }
+
+    withLabel: rnaseqc {
+        cpus = 1
+        memory = '10.0 GB'
+        time = '12h'
+        clusterOptions = "-R'select[mem>10240]' -R'rusage[mem=10240]' -M10240"
+    }
 }
