Added HOMER analysis

--- a/03_Functional_Interpretation/workflow/nextflow.config
+++ b/03_Functional_Interpretation/workflow/nextflow.config
@@ -16,7 +16,7 @@ process {
     memory = '4.0 GB'
     time = '12h'
     clusterOptions = "-R'select[mem>4096]' -R'rusage[mem=4096]' -M4096"
-    conda = '/lustre/scratch119/humgen/projects/gains_team282/nikhil/conda/functional_interpretation'
+    conda = '/lustre/scratch119/humgen/projects/gains_team282/nikhil/conda/env/'
 
     withLabel: simple_bash {
         cpus = 1
@@ -83,9 +83,9 @@ process {
 
     withLabel: samtools {
         cpus = 16
-        memory = '16.0 GB'
+        memory = '20.0 GB'
         time = '12h'
-        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
+        clusterOptions = "-R'select[mem>20480]' -R'rusage[mem=20480]' -M20480"
     }
 
     withLabel: macs2 {
@@ -101,6 +101,13 @@ process {
         memory = '8.0 GB'
         time = '12h'
         clusterOptions = "-R'select[mem>8192]' -R'rusage[mem=8192]' -M8192"
+    }
+
+    withLabel: homer {
+        cpus = 16
+        memory = '16.0 GB'
+        time = '12h'
+        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
     }
 
     withLabel: multiqc {
