--- a/env/environment.yml
+++ b/env/environment.yml
@@ -39,6 +39,7 @@ dependencies:
  - pysam >= 0.17.0
  - qualimap >= 2.2.2d
  - plink >= 1.90b6.21
+ - homer >= 4.11
  - r-wgcna
  - bioconductor-go.db                           #  Required for WGCNA
  - bioconductor-impute                          #  Required for WGCNA
