--- a/env/environment.yml
+++ b/env/environment.yml
@@ -10,7 +10,7 @@ dependencies:
 
 # Jupyter Lab
  - jupyterlab >= 3.2.1
- - r-base >= 4.0.0
+ - r-base < 4.1.0
  - r-irkernel
 
 # R Packages for Data Analysis
