Added SEA enrichment instead of HOMER for motifs

--- a/env/environment.yml
+++ b/env/environment.yml
@@ -40,6 +40,7 @@ dependencies:
  - qualimap >= 2.2.2d
  - plink >= 1.90b6.21
  - homer >= 4.11
+ - meme >= 5.4.1
  - r-wgcna
  - bioconductor-go.db                           #  Required for WGCNA
  - bioconductor-impute                          #  Required for WGCNA
