--- a/03_Functional_Interpretation/workflow/nextflow.config
+++ b/03_Functional_Interpretation/workflow/nextflow.config
@@ -110,6 +110,13 @@ process {
         clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
     }
 
+    withLabel: sea {
+        cpus = 4
+        memory = '16.0 GB'
+        time = '12h'
+        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
+    }
+
     withLabel: multiqc {
         cpus = 4
         memory = '8.0 GB'
