Added new co-expression method and FINEMAP

--- a/01_Colocalization/workflow/nextflow.config
+++ b/01_Colocalization/workflow/nextflow.config
@@ -27,10 +27,10 @@ process {
     }
 
     withLabel: R {
-        queue = 'long'
-        cpus = 1
+        queue = 'normal'
+        cpus = 16
         memory = '8.0 GB'
-        time = '48h'
+        time = '12h'
         clusterOptions = "-R'select[mem>8192]' -R'rusage[mem=8192]' -M8192"
     }
 
@@ -40,5 +40,13 @@ process {
         memory = '2.0 GB'
         time = '12h'
         clusterOptions = "-R'select[mem>2048]' -R'rusage[mem=2048]' -M2048"
+    }
+
+    withLabel: finemap {
+        queue = 'normal'
+        cpus = 16
+        memory = '16.0 GB'
+        time = '12h'
+        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
     }
 }
