--- a/03_Functional_Interpretation/workflow/nextflow.config
+++ b/03_Functional_Interpretation/workflow/nextflow.config
@@ -111,10 +111,11 @@ process {
     }
 
     withLabel: sea {
+        queue = 'long'
         cpus = 4
-        memory = '16.0 GB'
-        time = '12h'
-        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
+        memory = '32.0 GB'
+        time = '48h'
+        clusterOptions = "-R'select[mem>32768]' -R'rusage[mem=32768]' -M32768"
     }
 
     withLabel: multiqc {
