--- a/01_Colocalization/workflow/nextflow.config
+++ b/01_Colocalization/workflow/nextflow.config
@@ -49,4 +49,12 @@ process {
         time = '12h'
         clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
     }
+
+    withLabel: plink {
+        queue = 'normal'
+        cpus = 4
+        memory = '16.0 GB'
+        time = '12h'
+        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
+    }
 }
