Updated CHEERS workflow

--- a/03_Functional_Interpretation/workflow/nextflow.config
+++ b/03_Functional_Interpretation/workflow/nextflow.config
@@ -20,9 +20,16 @@ process {
 
     withLabel: simple_bash {
         cpus = 1
-        memory = '2.0 GB'
+        memory = '16.0 GB'
         time = '12h'
-        clusterOptions = "-R'select[mem>2048]' -R'rusage[mem=2048]' -M2048"
+        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
+    }
+
+    withLabel: multi_cpu_bash {
+        cpus = 16
+        memory = '16.0 GB'
+        time = '12h'
+        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
     }
 
     withLabel: dump_fastq {
@@ -145,5 +152,13 @@ process {
         memory = '10.0 GB'
         time = '12h'
         clusterOptions = "-R'select[mem>10240]' -R'rusage[mem=10240]' -M10240"
+    }
+
+    withLabel: cheers {
+        cpus = 2
+        memory = '16.0 GB'
+        time = '12h'
+        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
+        conda = '/lustre/scratch119/humgen/projects/gains_team282/nikhil/conda/cheers/'
     }
 }
