Updated CHEERS enrichment analysis

--- a/03_Functional_Interpretation/workflow/nextflow.config
+++ b/03_Functional_Interpretation/workflow/nextflow.config
@@ -155,10 +155,10 @@ process {
     }
 
     withLabel: cheers {
+        queue = 'long'
         cpus = 2
-        memory = '16.0 GB'
-        time = '12h'
-        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
-        conda = '/lustre/scratch119/humgen/projects/gains_team282/nikhil/conda/cheers/'
+        memory = '64.0 GB'
+        time = '24h'
+        clusterOptions = "-R'select[mem>65536]' -R'rusage[mem=65536]' -M65536"
     }
 }
