Updated to perform conditional fine mapping

--- a/01_Colocalization/workflow/FINEMAP_fine_mapping/nextflow.config
+++ b/01_Colocalization/workflow/FINEMAP_fine_mapping/nextflow.config
@@ -26,6 +26,14 @@ process {
         clusterOptions = "-R'select[mem>102400]' -R'rusage[mem=102400]' -M102400"
     }
 
+    withLabel: Rhugemem {
+        queue = 'long'
+        cpus = 16
+        memory = '200.0 GB'
+        time = '24h'
+        clusterOptions = "-R'select[mem>204800]' -R'rusage[mem=204800]' -M204800"
+    }
+
     withLabel: R {
         queue = 'normal'
         cpus = 16
