Updated ATAC-seq peak generation process

--- a/03_Functional_Interpretation/workflow/enrichment/nextflow.config
+++ b/03_Functional_Interpretation/workflow/enrichment/nextflow.config
@@ -40,9 +40,10 @@ process {
     }
 
     withLabel: goshifter {
+        queue = 'long'
         cpus = 16
         memory = '8.0 GB'
-        time = '12h'
+        time = '48h'
         clusterOptions = "-R'select[mem>8192]' -R'rusage[mem=8192]' -M8192"
     }
 }
