--- a/env/environment.yml
+++ b/env/environment.yml
@@ -49,6 +49,11 @@ dependencies:
  - meme >= 5.4.1
  - gcta >= 1.93.2beta
  - r-wgcna
+ - ucsc-bedgraphtobigwig >= 377
+ - pybigwig >= 0.3.18
+ - scanpy >= 1.7.2
+ - r-seurat >= 4.1.0
+ - r-seuratdisk >= 0.0.9019
  - bioconductor-go.db                           #  Required for WGCNA
  - bioconductor-impute                          #  Required for WGCNA
  - bioconductor-preprocesscore                  #  Required for WGCNA
