Finalized gene expression module generation

--- a/03_Functional_Interpretation/workflow/regulation/nextflow.config
+++ b/03_Functional_Interpretation/workflow/regulation/nextflow.config
@@ -18,10 +18,17 @@ process {
     clusterOptions = "-R'select[mem>4096]' -R'rusage[mem=4096]' -M4096"
     conda = '/lustre/scratch119/humgen/projects/gains_team282/nikhil/conda/env/'
 
-    withLabel: python {
+    withLabel: cell_shape_features {
         cpus = 2
-        memory = '100.0 GB'
+        memory = '1.0 GB'
         time = '12h'
-        clusterOptions = "-R'select[mem>102400]' -R'rusage[mem=102400]' -M102400"
+        clusterOptions = "-R'select[mem>1024]' -R'rusage[mem=1024]' -M1024"
+    }
+
+    withLabel: consensus_shape_features {
+        cpus = 16
+        memory = '32.0 GB'
+        time = '12h'
+        clusterOptions = "-R'select[mem>32768]' -R'rusage[mem=32768]' -M32768"
     }
 }
