--- a/03_Functional_Interpretation/workflow/regulation/nextflow.config
+++ b/03_Functional_Interpretation/workflow/regulation/nextflow.config
@@ -27,8 +27,9 @@ process {
 
     withLabel: consensus_shape_features {
         cpus = 16
+        queue = 'long'
         memory = '32.0 GB'
-        time = '12h'
+        time = '24h'
         clusterOptions = "-R'select[mem>32768]' -R'rusage[mem=32768]' -M32768"
     }
 }
