--- a/03_Functional_Interpretation/workflow/enrichment/nextflow.config
+++ b/03_Functional_Interpretation/workflow/enrichment/nextflow.config
@@ -32,6 +32,13 @@ process {
         clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
     }
 
+    withLabel: heritability {
+        cpus = 16
+        memory = '16.0 GB'
+        time = '12h'
+        clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
+    }
+
     withLabel: cheers {
         cpus = 2
         memory = '4.0 GB'
