--- a/03_Functional_Interpretation/workflow/enrichment/nextflow.config
+++ b/03_Functional_Interpretation/workflow/enrichment/nextflow.config
@@ -35,7 +35,8 @@ process {
     withLabel: heritability {
         cpus = 16
         memory = '16.0 GB'
-        time = '12h'
+        time = '24h'
+        queue = 'long'
         clusterOptions = "-R'select[mem>16384]' -R'rusage[mem=16384]' -M16384"
     }
 
